--- a/templates/analisis.html
+++ b/templates/analisis.html
@@ -69,7 +69,7 @@
                                             <path
                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm.5 5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1 0-1M4 8.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m2 3a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5" />
                                         </svg>
-                                    </button> Ponderaciones
+                                    </button> Ponderaciones del Portafolio
                                 </th>
                             </tr>
                             <tr class="symbol-row" style="height: 40px;">
@@ -106,7 +106,7 @@
                                             <path
                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
                                         </svg>
-                                    </button> Resultados
+                                    </button> Resultados del análisis
                                 </th>
                             </tr>
                             <tr class="symbol-row" style="height: 40px;">
@@ -145,7 +145,7 @@
                                             <path
                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
                                         </svg>
-                                    </button> Estadísticas de Retorno
+                                    </button> Estadísticas del Portafolio
                                 </th>
                             </tr>
                             <tr class="symbol-row" style="height: 40px; display: none;">
