--- a/templates/index.html
+++ b/templates/index.html
@@ -121,11 +121,8 @@
         </div>
     </section>
 
-    <section id="contacto" style="background-color: black; padding: 50px 0; color: #fff; text-align: center;">
-        <h2 style="margin-bottom: 30px;">Contacto</h2>
-        <p>Email: info@pyfolio.com</p>
+    <section id="contacto" style="background-color: black; padding: 50px 0; color: #fff; text-align: center; margin-bottom: 20px;">
         <p>Pyfolio &copy; Copyright 2024</p>
-
     </section>
 </body>
 {% endblock %}
