--- a/templates/index.html
+++ b/templates/index.html
@@ -123,6 +123,7 @@
 
     <section id="contacto" style="background-color: black; padding: 20px 0; color: #fff; text-align: center; margin-bottom: 20px;">
         <p>Pyfolio &copy; Copyright 2024</p>
+        <img src="{% static 'images/logo.png' %}" alt="Footer" height="10vw" style="margin-bottom: 20px;">
     </section>
 </body>
 {% endblock %}
