--- a/templates/index.html
+++ b/templates/index.html
@@ -121,9 +121,13 @@
         </div>
     </section>
 
-    <section id="contacto" style="background-color: black; padding: 20px 0; color: #fff; text-align: center; margin-bottom: 20px;">
-        <p>Pyfolio &copy; Copyright 2024</p>
-        <img src="{% static 'images/logo.png' %}" alt="Footer" height="10vw" style="margin-bottom: 20px;">
+    <section id="contacto" style="background-color: black; padding: 20px 0; color: #fff; text-align: center;">
+        <div class="container" style="margin-bottom: 20px;">
+            <p>Pyfolio &copy; Copyright 2024</p>
+            <img src="{% static 'images/logo.png' %}" alt="Footer" height="30vw" style="margin-bottom: 20px;">
+        </div>
+    </section>
+        
     </section>
 </body>
 {% endblock %}
