--- a/templates/index.html
+++ b/templates/index.html
@@ -123,10 +123,8 @@
 
     <section id="contacto" style="background-color: black; padding: 20px 0; color: #fff; text-align: center;">
         <div class="container" style="margin-bottom: 50px;">
-            <h6 class="display-5"><img src="{% static 'images/logo.png' %}" alt="Footer" height="30vw" style="margin-bottom: 20px;"><strong>&copy; Copyright 2024</strong></h6>
+            <p><img src="{% static 'images/logo.png' %}" alt="Footer" height="30vw" style="margin-bottom: 20px;">&copy; Copyright 2024</p>
         </div>
-    </section>
-        
     </section>
 </body>
 {% endblock %}
