--- a/templates/index.html
+++ b/templates/index.html
@@ -121,10 +121,14 @@
         </div>
     </section>
 
-    <section id="contacto" style="background-color: black; padding: 20px 0; color: #fff; text-align: center;">
+    <section id="contacto" style="background-color: black; padding: 20px 0; color: #fff; text-align: center; display: flex; justify-content: center; align-items: center; height: 100vh;">
         <div class="container" style="margin-bottom: 50px;">
-            <p><img src="{% static 'images/logo.png' %}" alt="Footer" height="30vw" style="margin-bottom: 20px;">&copy; Copyright 2024</p>
+            <h6>
+                <img src="{% static 'images/logo.png' %}" alt="Footer" height="30vw" style="margin-bottom: 20px;"> 
+                &copy; Copyright 2024
+            </h6>
         </div>
     </section>
+    
 </body>
 {% endblock %}
