--- a/templates/index.html
+++ b/templates/index.html
@@ -121,12 +121,12 @@
         </div>
     </section>
 
-    <section id="contacto" style="background-color: black; padding: 20px 0; color: #fff; text-align: center; display: flex; justify-content: center; align-items: center; height: 100vh;">
+    <section id="contacto" style="background-color: black; padding: 20px 0; color: #fff; text-align: center; display: flex; justify-content: center; align-items: center;">
         <div class="container" style="margin-bottom: 50px;">
-            <h6>
-                <img src="{% static 'images/logo.png' %}" alt="Footer" height="30vw" style="margin-bottom: 20px;"> 
+            <p>
+                <img src="{% static 'images/logo.png' %}" alt="Footer" height="20vw" style="margin-bottom: 20px;"> 
                 &copy; Copyright 2024
-            </h6>
+            </p>
         </div>
     </section>
     
