--- a/templates/index.html
+++ b/templates/index.html
@@ -123,10 +123,8 @@
 
     <section id="contacto" style="background-color: black; padding: 20px 0; color: #fff; text-align: center; display: flex; justify-content: center; align-items: center;">
         <div class="container" style="margin-bottom: 50px;">
-            <p>
-                <img src="{% static 'images/logo.png' %}" alt="Footer" height="20vw" style="margin-bottom: 20px;"> 
-                &copy; Copyright 2024
-            </p>
+            <img src="{% static 'images/logo.png' %}" alt="Footer" height="25vw" style="margin-bottom: 10px;"> 
+            <p>&copy; Copyright 2024</p>
         </div>
     </section>
     
